data/derived/sp14/progs/unify/prog0767.ml.out
Characters 20-21:
  let _ = append [0] [1;2];;
                      ^
Error: This expression has type int but an expression was expected of type
         int list
